<resources>
    <string name="app_name">KUC</string>
    <string name="map_key" translatable="false">AIzaSyCVAcrGCG8JVUwGtXHptgKvL8wcQYCls2A</string>
    <string name="default_notification_channel_id">defaultchannelid</string>
    <string name="Loading">Loading...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">مرحبا</string>
    <string name="nav_header_subtitle">تسجيل دخول</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">عن المركز</string>
    <string name="menu_services">خدماتنا</string>
    <string name="menu_contracts">التعاقدات</string>
    <string name="menu_news">الاخبار</string>
    <string name="menu_contactUs">اتصل بنا</string>
    <string name="menu_new">اطلبنا الان</string>
    <string name="title_activity_testt_maps">Map</string>
    <string name="menu_around">حول التطبيق</string>
    <string name="menu_myAccount">حسابى</string>
    <string name="title_activity_lab_sheet">LabSheetActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="test">كل التحاليل</string>
    <string name="search">بحث</string>
    <string name="menu_noInternet">خطأ فى الإتصال</string>

</resources>
