<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_contracts"
            android:title="@string/menu_contracts" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_contactUs"
            android:title="@string/menu_contactUs" />
        <item
            android:id="@+id/nav_new"
            android:title="@string/menu_new" />
    </group>

</menu>
