<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.deleny.kuc.ui.home.HomeFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_allTests"
        android:name="com.deleny.kuc.ui.alltests.AllTestsFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragmen_allTests" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.deleny.kuc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_contracts"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.deleny.kuc.ui.tools.ToolsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.deleny.kuc.ui.share.ShareFragment"
        android:label="@string/menu_new"
        tools:layout="@layout/fragment_share" />


</navigation>