<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="right">


    <include
        layout="@layout/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:fitsSystemWindows="true"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        app:itemTextAppearance="@style/FontToNavDrawer.ontToNavDrawer">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="rtl"
                android:orientation="vertical"
                android:textDirection="rtl">

                <LinearLayout
                    android:id="@+id/nav_home"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/default_user_img" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/usernameTV"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/el_messiri"
                            android:text="@string/nav_header_title"
                            android:textColor="@color/colorBlack"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/loginTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/el_messiri"
                            android:padding="10dp"
                            android:text="@string/nav_header_subtitle"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>


                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorGreen" />

                <LinearLayout
                    android:id="@+id/aboutLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/about" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_about"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>
             <!--   <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey" /> -->

                <LinearLayout
                    android:id="@+id/servicesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/service" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_services"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>
               <!-- <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey" /> -->

                <LinearLayout
                    android:id="@+id/contractsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ensurance" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_contracts"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>

           <!--     <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey" /> -->

                <LinearLayout
                    android:id="@+id/newsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/news" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_news"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>

             <!--   <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey" /> -->


                <LinearLayout
                    android:id="@+id/contactUsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/contacts" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_contactUs"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/orderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/call_now" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_new"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey" />

                <LinearLayout
                    android:id="@+id/myAccountLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/around_app" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_myAccount"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aroundLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/around_app" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/el_messiri"
                        android:gravity="start"
                        android:text="@string/menu_around"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                </LinearLayout>




                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="10dp">

                          <androidx.recyclerview.widget.RecyclerView
                              android:id="@+id/socialMediaRV"
                              tools:itemCount="4"
                              tools:listitem="@layout/social_media_one_item"
                              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                              android:layout_width="wrap_content"
                              android:scrollbars="horizontal"
                              android:layout_height="30dp"/>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@color/colorGrey">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="Version 1.0"
                                android:textColor="@color/colorWhite" />

                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
